--- a/config.ini
+++ b/config.ini
@@ -11,3 +11,17 @@ POST_KEYWORDS = ["акция", "мероприятие"]
 MAX_GROUPS = 5
 DAYS_AGO = 2
 CHECK_INTERVAL = 900
+
+[TELEGRAM]
+TOKEN = ваш_телеграм_токен
+CHAT_ID = ваш_чат_id
+
+[FILTERS]
+STOP_WORDS = ["спам", "реклама", "купить"]
+SPAM_REGEX = ["http[s]?://", "[\d{10,}]"]
+
+[NETWORK]
+USE_PROXY = False
+PROXY_URL = http://user:pass@host:port
+
+[SETTINGS]
